Change card background

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
   --primary-color: rgb(16, 72, 145);
   --secondary-color: rgb(8, 104, 184);
-  --light-ash-color: rgb(241, 240, 240);
+  --light-ash-color: rgb(219 225 255);
 }
 
 /* Initial Set */
