--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ body {
   cursor: pointer;
   background: var(--secondary-color);
   color: #fff;
+  font-size: 1rem;
 }
 
 .primary-btn:hover {
@@ -63,6 +64,12 @@ body {
 
 .pointer {
   cursor: pointer;
+}
+
+.msg {
+  padding: 10px;
+  background: #fff;
+  font-weight: 500;
 }
 
 /* Card */
